--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "http-status-codes": "^1.3.0",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
-    "mongoose": "^5.7.5",
+    "mongoose": "^5.10.5",
     "morgan": "~1.9.0",
     "mysql": "^2.16.0",
     "sha256": "^0.2.0",
     "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
