--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
-  "name": "express-mongo",
+  "name": "nova-user-management",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "start": "NODE_ENV=production node ./server.js",
+    "dev": "nodemon ./server.js",
+    "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '🚀 Linter passed'"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.12.10",
+    "@babel/runtime": "^7.4.5",
+    "axios": "^0.18.0",
+    "babel-loader": "^8.0.0-beta.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -24,6 +30,15 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "babel-jest": "^24.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "pre-commit": "^1.2.2",
+    "supertest": "^6.0.1"
   }
 }
