--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-validation": "^1.0.2",
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.3.0",
     "joi": "^14.3.1",
