--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "private": true,
   "scripts": {
     "start": "NODE_ENV=production node ./server.js",
+    "test": "jest",
     "dev": "nodemon ./server.js",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '🚀 Linter passed'"
   },
+  "pre-commit": [
+    "lint"
+  ],
   "dependencies": {
     "@babel/preset-env": "^7.4.5",
     "@babel/register": "^7.12.10",
@@ -40,6 +44,7 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "pre-commit": "^1.2.2",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "jest": "^26.6.3"
   }
 }
