--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "lint"
   ],
   "dependencies": {
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.12.10",
-    "@babel/runtime": "^7.4.5",
     "@babel/core": "^7.0.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/register": "^7.12.10",
+    "@babel/runtime": "^7.4.5",
     "axios": "^0.21.1",
     "babel-loader": "^8.0.0-beta.0",
     "cookie-parser": "~1.4.3",
@@ -33,18 +33,17 @@
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.10.5",
     "morgan": "~1.9.0",
-    "mysql": "^2.16.0",
     "sha256": "^0.2.0",
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.4",
     "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.4",
     "pre-commit": "^1.2.2",
-    "supertest": "^6.0.1",
-    "jest": "^26.6.3"
+    "supertest": "^6.0.1"
   }
 }
