--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.10.5",
+    "mongoose-paginate-v2": "^1.3.17",
     "morgan": "~1.9.0",
     "sha256": "^0.2.0",
     "validator": "^10.11.0"
