--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "pre-commit": [
     "precommit-msg",
     "lint",
-    "format"
+    "format",
+    "git add"
   ],
   "dependencies": {
     "@babel/core": "^7.0.0",
@@ -36,10 +37,11 @@
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.10.5",
-    "mongoose-delete": "^0.5.3",
     "mongoose-paginate-v2": "^1.3.17",
     "morgan": "~1.9.0",
     "sha256": "^0.2.0",
+    "swagger-jsdoc": "^6.1.0",
+    "swagger-ui-express": "^4.1.6",
     "validator": "^10.11.0"
   },
   "devDependencies": {
