--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
   "pre-commit": [
     "precommit-msg",
     "lint",
-    "format",
-    "git add"
+    "format"
   ],
   "dependencies": {
     "@babel/core": "^7.0.0",
