--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.17.3",
     "jest": "^26.6.3",
-    "nodemon": "^2.0.4",
+    "kill-port": "^1.6.1",
+    "nodemon": "^2.0.13",
     "pre-commit": "^1.2.2",
     "prettier": "^2.2.1",
     "pretty-quick": "^3.1.0",
