--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.3.0",
     "joi": "^14.3.1",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.10.5",
     "mongoose-paginate-v2": "^1.3.17",
