--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "NODE_ENV=production node ./server.js",
+    "prestart": "npm run clean && npm run -s build",
+    "start": "node dist/index.js",
+    "dev": "NODE_ENV=development nodemon src/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "clean": "rimraf dist",
+    "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "jest",
-    "dev": "nodemon ./server.js",
     "precommit-msg": "echo '🚀 Pre-commit checks...' && exit 0",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✨ Linter passed!'",
     "format": "pretty-quick --staged"
@@ -15,15 +18,19 @@
     "lint",
     "format"
   ],
+  "license": "MIT",
+  "main": "dist/index.js",
+  "engines": {
+    "node": ">=10.15.1",
+    "npm": ">=6.4.0"
+  },
   "dependencies": {
-    "@babel/core": "^7.0.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/register": "^7.12.10",
-    "@babel/runtime": "^7.4.5",
     "axios": "^0.21.1",
+    "babel-cli": "^6.26.0",
     "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -43,16 +50,20 @@
     "validator": "^10.11.0"
   },
   "devDependencies": {
-    "babel-jest": "^24.8.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.17.3",
-    "jest": "^26.6.3",
+    "babel-eslint": "^10.0.1",
+    "babel-jest": "^24.5.0",
+    "babel-register": "^6.26.0",
+    "dotenv": "^7.0.0",
+    "eslint": "^5.15.2",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jest": "^22.4.1",
+    "eslint-watch": "^5.0.1",
+    "jest": "^24.5.0",
     "kill-port": "^1.6.1",
-    "nodemon": "^2.0.13",
+    "nodemon": "^1.19.4",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.2.1",
-    "pretty-quick": "^3.1.0",
-    "supertest": "^6.0.1"
+    "prettier": "^2.5.1",
+    "pretty-quick": "^3.1.2",
+    "supertest": "^4.0.2"
   }
 }
