--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/preset-env",
       {
         "targets": {
           "node": "current"
@@ -9,5 +9,8 @@
       }
     ]
   ],
-  "plugins": ["transform-object-rest-spread", "transform-class-properties"]
+  "plugins": [
+    "@babel/plugin-proposal-object-rest-spread",
+    "@babel/transform-runtime"
+  ]
 }
