--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "prestart": "npm run clean && npm run -s build",
     "start": "node dist/index.js",
-    "dev": "NODE_ENV=development nodemon src/index.js --exec \"node -r dotenv/config -r babel-register\"",
+    "dev": "NODE_ENV=development nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
     "clean": "rimraf dist",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "jest",
@@ -21,16 +21,12 @@
   "license": "MIT",
   "main": "dist/index.js",
   "engines": {
-    "node": ">=10.15.1",
+    "node": ">=12.22.0",
     "npm": ">=6.4.0"
   },
   "dependencies": {
+    "aws-sdk": "^2.1046.0",
     "axios": "^0.21.2",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.0-beta.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -46,24 +42,33 @@
     "mongoose": "^5.10.5",
     "mongoose-paginate-v2": "^1.3.17",
     "morgan": "~1.9.0",
+    "multer": "^1.4.4",
+    "multer-s3": "^2.10.0",
     "sha256": "^0.2.0",
+    "uuid4": "^2.0.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.5.0",
-    "babel-register": "^6.26.0",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-transform-runtime": "^7.16.4",
+    "@babel/preset-env": "^7.16.4",
+    "@babel/register": "^7.16.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^27.4.4",
     "dotenv": "^7.0.0",
-    "eslint": "^5.15.2",
-    "eslint-plugin-import": "^2.16.0",
-    "eslint-plugin-jest": "^22.4.1",
-    "eslint-watch": "^5.0.1",
-    "jest": "^24.5.0",
+    "eslint": "^8.4.1",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-watch": "^8.0.0",
+    "jest": "^27.4.4",
     "kill-port": "^1.6.1",
     "nodemon": "^1.19.4",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
+    "regenerator-runtime": "^0.13.9",
     "supertest": "^4.0.2"
   }
 }
