--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "prestart": "npm run clean && npm run -s build",
-    "start": "node dist/index.js",
-    "dev": "NODE_ENV=development nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
+    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
     "clean": "rimraf dist",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "jest",
