--- a/package.json
+++ b/package.json
@@ -26,13 +26,14 @@
   },
   "dependencies": {
     "aws-sdk": "^2.1046.0",
-    "axios": "^0.21.2",
+    "axios": "^0.21.4",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^6.2.0",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
+    "express-recaptcha": "^5.1.0",
     "express-validation": "^1.0.2",
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.3.0",
