docs: heroku deploy button added edited

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,10 @@
+SECRET=""
+MONGO_CONNECTION_STRING=""
+BASE_URL=""
 AWS_ACCESS_KEY_ID=""
 AWS_SECRET_ACCESS_KEY=""
 AWS_BUCKET=""
 AWS_ENDPOINT=""
 RECAPTCHA_SITE_KEY=""
 RECAPTCHA_SECRET_KEY=""
-RECAPTCHA_VERIFY_URL="https://www.google.com/recaptcha/api/siteverify"
+RECAPTCHA_VERIFY_URL=""
