docs: heroku deploy button added edited

--- a/app.json
+++ b/app.json
@@ -14,7 +14,8 @@
       "required": true
     },
     "BASE_URL": {
-      "description": "App base URL."
+      "description": "App base URL.",
+      "required": false
     },
     "AWS_ACCESS_KEY_ID": {
       "description": "AWS access key ID.",
@@ -29,7 +30,8 @@
       "required": true
     },
     "AWS_ENDPOINT": {
-      "description": "AWS endpoint url."
+      "description": "AWS endpoint url.",
+      "required": false
     },
     "RECAPTCHA_SITE_KEY": {
       "description": "Recaptcha site key.",
@@ -40,7 +42,8 @@
       "required": true
     },
     "RECAPTCHA_VERIFY_URL": {
-      "description": "Recaptcha verify url."
+      "description": "Recaptcha verify url.",
+      "required": false
     }
   },
   "scripts": {}
