--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "prestart": "npm run clean && npm run -s build",
+    "postdeploy": "npm run clean && npm run -s build",
     "start": "NODE_ENV=production node dist/index.js",
     "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
     "clean": "rimraf dist",
