--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
+    "rimraf": "^3.0.2",
     "sha256": "^0.2.0",
     "uuid4": "^2.0.2",
     "validator": "^13.7.0"
