--- a/app.json
+++ b/app.json
@@ -47,6 +47,7 @@
     }
   },
   "scripts": {
+    "prebuild": "export NPM_CONFIG_PRODUCTION=false; export NODE_ENV=; NPM_CONFIG_PRODUCTION=false NODE_ENV=development npm install --only=dev --dev",
     "postdeploy": "npm run postdeploy"
   }
 }
