refactor: changed app.json schema

--- a/app.json
+++ b/app.json
@@ -44,7 +44,8 @@
     },
     "RECAPTCHA_VERIFY_URL": {
       "description": "Recaptcha verify url.",
-      "required": false
+      "required": false,
+      "default": "https://www.google.com/recaptcha/api/siteverify"
     }
   },
   "scripts": {
