--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@babel/runtime": "^7.17.9",
     "aws-sdk": "^2.1046.0",
     "axios": "^0.21.4",
+    "cli-color": "^2.0.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
+    "dotenv": "^7.0.0",
     "ejs": "~3.1.7",
     "express": "~4.16.0",
     "express-recaptcha": "^5.1.0",
@@ -48,8 +50,7 @@
     "multer-s3": "^2.10.0",
     "sha256": "^0.2.0",
     "uuid4": "^2.0.2",
-    "validator": "^13.7.0",
-    "dotenv": "^7.0.0"
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.16.0",
@@ -71,7 +72,7 @@
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
-    "supertest": "^4.0.2",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "supertest": "^4.0.2"
   }
 }
