--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start:build": "NODE_ENV=production node dist/index.js",
     "start": "node src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
     "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
+    "cli": "node -r dotenv/config -r @babel/register src/cli.js",
     "clean": "rimraf dist",
     "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
     "test": "jest",
