--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "heroku-prebuild": "NPM_CONFIG_PRODUCTION=false npm install",
     "postdeploy": "npm run clean && npm run -s build",
     "start:build": "NODE_ENV=production node dist/index.js",
-    "start": "node src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
+    "start": "node -r dotenv/config -r @babel/register src/index.js",
     "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
     "cli": "node -r dotenv/config -r @babel/register src/cli.js",
     "clean": "rimraf dist",
