feat: updating dependencies

--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "cors": "^2.8.5",
     "debug": "~2.6.9",
     "dotenv": "^7.0.0",
-    "ejs": "~3.1.7",
-    "express": "~4.18.2",
+    "ejs": "^3.1.10",
+    "express": "^4.21.2",
     "express-recaptcha": "^5.1.0",
     "express-validation": "^1.0.2",
     "http-errors": "~1.6.2",
@@ -69,7 +69,7 @@
     "eslint-watch": "^8.0.0",
     "jest": "^27.4.4",
     "kill-port": "^1.6.1",
-    "nodemon": "^1.19.4",
+    "nodemon": "^3.1.9",
     "pre-commit": "^1.2.2",
     "prettier": "^2.5.1",
     "pretty-quick": "^3.1.2",
