--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "node": ">=12.22.0",
     "npm": ">=6.4.0"
   },
+  "_moduleAliases": {
+    "@": "src"
+  },
   "dependencies": {
     "@babel/runtime": "^7.27.0",
     "aws-sdk": "^2.1046.0",
@@ -45,6 +48,7 @@
     "joi": "^14.3.1",
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
+    "module-alias": "^2.2.3",
     "mongoose": "^6.13.6",
     "mongoose-paginate-v2": "^1.3.17",
     "morgan": "~1.9.0",
