--- a/package.json
+++ b/package.json
@@ -1,16 +1,10 @@
 {
-  "name": "zigzag",
+  "name": "zigzag123",
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "heroku-prebuild": "NPM_CONFIG_PRODUCTION=false npm install",
-    "postdeploy": "npm run clean && npm run -s build",
-    "start:build": "NODE_ENV=production node dist/index.js",
-    "start": "node -r dotenv/config -r @babel/register src/index.js",
-    "dev": "nodemon src/index.js --exec \"node -r dotenv/config -r @babel/register\"",
-    "cli": "node -r dotenv/config -r @babel/register src/cli.js",
-    "clean": "rimraf dist",
-    "build": "npm run clean && mkdir -p dist && babel src -s -D -d dist",
+    "start": "vite-node src/index.js",
+    "dev": "nodemon --exec vite-node src/index.js",
     "test": "jest",
     "precommit-msg": "echo '🚀 Pre-commit checks...' && exit 0",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✨ Linter passed!'",
@@ -22,19 +16,24 @@
     "format"
   ],
   "license": "MIT",
-  "main": "dist/index.js",
+  "main": "src/index.js",
   "engines": {
     "node": ">=12.22.0",
     "npm": ">=6.4.0"
   },
+  "type": "module",
   "_moduleAliases": {
     "@": "src"
   },
   "dependencies": {
-    "@babel/runtime": "^7.27.0",
+    "@adminjs/express": "^6.1.1",
+    "@adminjs/mongoose": "^4.1.0",
+    "adminjs": "^7.8.15",
     "aws-sdk": "^2.1046.0",
     "axios": "^0.30.0",
+    "body-parser": "^2.2.0",
     "cli-color": "^2.0.2",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.5",
     "debug": "~2.6.9",
@@ -49,24 +48,18 @@
     "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.3",
-    "mongoose": "^6.13.6",
+    "mongoose": "^8.13.1",
     "mongoose-paginate-v2": "^1.3.17",
     "morgan": "~1.9.0",
     "multer": "^1.4.4",
     "multer-s3": "^2.10.0",
     "sha256": "^0.2.0",
     "uuid4": "^2.0.2",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "vite": "^6.2.6",
+    "vite-node": "^3.1.1"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/plugin-transform-runtime": "^7.16.4",
-    "@babel/preset-env": "^7.16.4",
-    "@babel/register": "^7.16.0",
-    "babel-eslint": "^10.1.0",
-    "babel-jest": "^27.4.4",
     "eslint": "^8.4.1",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
