--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "@adminjs/express": "^6.1.1",
     "@adminjs/mongoose": "^4.1.0",
+    "@mkhizeryounas/logger": "^1.0.4",
     "adminjs": "^7.8.15",
     "aws-sdk": "^2.1046.0",
     "axios": "^0.30.0",
