--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "vite-node src/index.js",
     "dev": "nodemon --exec vite-node src/index.js",
-    "test": "jest",
+    "test": "vitest",
     "precommit-msg": "echo '🚀 Pre-commit checks...' && exit 0",
     "lint": "eslint . --max-warnings=0 --report-unused-disable-directives && echo '✨ Linter passed!'",
     "format": "pretty-quick --staged"
@@ -61,18 +61,20 @@
     "vite-node": "^3.1.1"
   },
   "devDependencies": {
-    "eslint": "^8.4.1",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.25.3",
-    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-watch": "^8.0.0",
-    "jest": "^27.4.4",
     "kill-port": "^1.6.1",
     "nodemon": "^3.1.9",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.5.1",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.2",
     "regenerator-runtime": "^0.13.9",
     "rimraf": "^3.0.2",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "vitest": "^3.1.1"
   }
 }
