--- a/package.json
+++ b/package.json
@@ -42,11 +42,9 @@
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-recaptcha": "^5.1.0",
-    "express-validation": "^1.0.2",
     "http-errors": "~1.6.2",
     "http-status-codes": "^1.3.0",
-    "joi": "^14.3.1",
-    "joi-objectid": "^4.0.2",
+    "zod": "^3.22.4",
     "jsonwebtoken": "^9.0.0",
     "module-alias": "^2.2.3",
     "mongoose": "^8.13.1",
